--- a/admin/admin/theme/core.css
+++ b/admin/admin/theme/core.css
@@ -1,1 +1,68 @@
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,code,del,dfn,em,img,q,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{border:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;margin:0;padding:0}blockquote:before,blockquote:after,q:before,q:after{content:""}html,body{height:100%}html{color:#555753;font-size:12px;line-height:1.5em;background:none}body{background-color:#2E3436;border:0;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif;font-size:100%;min-width:600px;width:100%;margin:0}p{margin:0 0 .8em}a:visited{color:#A40000;text-decoration:none}a:focus{color:#C00;text-decoration:none}h1{color:#2E3436;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif;font-size:1.5em;font-weight:700;line-height:1.5em;margin-bottom:.666em;margin-top:.666em;display:inline}h2,h3{color:#2E3436;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif;font-size:1.3em;font-weight:700;line-height:1.3em;margin-bottom:.769em;margin-top:.769em}h4,h5,h6{color:#2E3436;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif;font-size:.9em;font-weight:700;line-height:.9em;margin-bottom:1.111em;margin-top:1.111em}ul{list-style-type:none;margin-bottom:0;margin-top:0;position:relative}ol{left:1.5%;position:relative}.li{display:list-item}blockquote{color:#868883;font-style:italic;margin:0 0 1.2% 1.2%}strong{color:#2E3436;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif;font-weight:700}em{color:#888A85;font-style:italic}.right{float:right}.small{font-size:.7em;line-height:.7em;margin-bottom:1.428em;margin-top:1.428em}.large{font-size:1.3em;line-height:1.3em;margin-bottom:.769em;margin-top:.769em}.soft{color:#D3D7CF;background-color:#FBFBFB}p.last{margin-bottom:0}input{margin-top:4px;color:#2E3436;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif}img{border:0}hr{border:1px dotted #888A85;height:1px}form{margin:0}fieldset{border:none;margin:1em 0}.table{display:table}.tbody{border-bottom:none;border-top:none;display:table-row-group;padding-right:0;text-align:left}.thead{border-bottom:none;display:table-header-group;text-align:left;vertical-align:baseline;padding:2px}.tfoot{border-bottom:none;display:table-footer-group;text-align:left;vertical-align:baseline;padding:2px}.tr{display:table-row}.td{display:table-cell;vertical-align:middle;padding:2px}.caption{border-bottom:none;display:table-caption;padding-right:0;text-align:left}abbr,acronym{border-bottom:none}table{table-layout:fixed;width:100%;background-color:#EEEEEC;border:1px solid #D3D7CF;border-spacing:.4em;border-collapse:separate;padding:12px}th,thead th,tbody th{border-bottom:none;text-align:center;color:#2E3436}th:hover{text-decoration:underline}tbody{border-top:none}td{min-height:16px;min-width:16px;background-color:#fff;border:1px solid #D3D7CF}th{border-bottom:1px solid #A2BFE2;font-weight:700}th,td{line-height:.9em;text-align:center;vertical-align:middle;overflow:hidden;word-wrap:break-word;padding:.8em}tfoot{font-style:italic}textarea{min-height:4em;width:100%}.form_highlight input,.form_highlight textarea{border:1px solid #E9B96E}.error,.notice,.success{margin-bottom:1em;border:2px solid #D3D7CF;text-align:center;padding:.9em}.error{background:#C00;color:#fff;border-color:#A40000}.notice{background:#EDD400;color:#fff;border-color:#C4A000}.success{background:#73D216;color:#fff;text-align:center;border-color:#4E9A06}.tag_min{font-size:.9em}.tag_1{font-size:1em}.tag_2{font-size:1.2em}.tag_3{font-size:1.3em}.tag_4{font-size:1.4em}.tag_5{font-size:1.5em}.tag_6{font-size:1.6em}.tag_7{font-size:1.7em}.tag_8{font-size:1.8em}.tag_9{font-size:1.9em}.tag_max{font-size:2em}label{padding-top:1em;padding-bottom:4px;font-weight:700}legend{font-size:1.3em;font-weight:700;line-height:1.3em}.form_radio{margin-left:1em;margin-right:1em}.hide{display:none}a,.error a,.notice a,.success a{font-weight:700}.clearThis,.clear{clear:both}
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,code,del,dfn,em,img,q,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{border:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;margin:0;padding:0}
+blockquote:before,blockquote:after,q:before,q:after{content:""}
+html,body{height:100%}
+html{color:#555753;font-size:12px;line-height:1.5em;background:none}
+body{background-color:#2E3436;border:0;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif;font-size:100%;min-width:600px;width:100%;margin:0}
+p{margin:0 0 .8em}
+a{font-weight:bold}
+a:visited{color:#A40000;text-decoration:none}
+a:focus{color:#CC0000;text-decoration:none}
+h1{color:#2E3436;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif;font-size:1.5em;font-weight:700;line-height:1.5em;margin-bottom:.666em;margin-top:.666em;display:inline}
+h2,h3{color:#2E3436;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif;font-size:1.3em;font-weight:700;line-height:1.3em;margin-bottom:.769em;margin-top:.769em}
+h4,h5,h6{color:#2E3436;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif;font-size:.9em;font-weight:700;line-height:.9em;margin-bottom:1.111em;margin-top:1.111em}
+ul{list-style-type:none;margin-bottom:0;margin-top:0;position:relative}
+ol{left:1.5%;position:relative}
+.li{display:list-item}
+blockquote{color:#868883;font-style:italic;margin:0 0 1.2% 1.2%}
+strong{color:#2E3436;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif;font-weight:700}
+em{color:#888A85;font-style:italic}
+.right{float:right}
+.clearThis{clear:both}
+.clear{clear:both}
+.small{font-size:.7em;line-height:.7em;margin-bottom:1.428em;margin-top:1.428em}
+.large{font-size:1.3em;line-height:1.3em;margin-bottom:.769em;margin-top:.769em}
+.soft{color:#D3D7CF;background-color:#FBFBFB}
+p.last{margin-bottom:0}
+input{margin-top:4px;color:#2E3436;font-family:"Lucida Grande","Lucida Sans Unicode",geneva,veranda,verdana,sans-serif}
+img{border:0}
+hr{border:1px dotted #888A85;height:1px}
+form{margin:0}
+fieldset{border:none;margin:1em 0}
+.table{display:table}
+.tbody{border-bottom:none;border-top:none;display:table-row-group;padding-right:0;text-align:left}
+.thead{border-bottom:none;display:table-header-group;text-align:left;padding:2px;vertical-align:baseline}
+.tfoot{border-bottom:none;display:table-footer-group;text-align:left;padding:2px;vertical-align:baseline}
+.tr{display:table-row}
+.td{display:table-cell;padding:2px;vertical-align:middle}
+.caption{border-bottom:none;display:table-caption;padding-right:0;text-align:left}
+abbr,acronym{border-bottom:none}
+table{table-layout:fixed;width:100%;background-color:#EEEEEC;border:1px solid #D3D7CF;padding:12px;border-spacing:0.4em;border-collapse:separate}
+th,thead th,tbody th{border-bottom:none;text-align:center;color:#2E3436}
+th:hover{text-decoration:underline}
+tbody{border-top:none}
+td{min-height:16px;min-width:16px;background-color:#fff;border:1px solid #D3D7CF}
+th{border-bottom:1px solid #A2BFE2;font-weight:700}
+th,td{line-height:.9em;text-align:center;padding:.8em;vertical-align:middle;overflow:hidden;word-wrap:break-word}
+tfoot{font-style:italic}
+textarea{min-height:4em;width:100%}
+.form_highlight input,.form_highlight textarea{border:1px solid #E9B96E}
+.error,.notice,.success{margin-bottom:1em;border:2px solid #D3D7CF;padding:.9em;text-align:center}
+.error{background:#C00;color:#fff;border-color:#A40000}
+.notice{background:#EDD400;color:#fff;border-color:#C4A000}
+.success{background:#73D216;color:#fff;text-align:center;border-color:#4E9A06}
+.tag_min{font-size:.9em}
+.tag_1{font-size:1em}
+.tag_2{font-size:1.2em}
+.tag_3{font-size:1.3em}
+.tag_4{font-size:1.4em}
+.tag_5{font-size:1.5em}
+.tag_6{font-size:1.6em}
+.tag_7{font-size:1.7em}
+.tag_8{font-size:1.8em}
+.tag_9{font-size:1.9em}
+.tag_max{font-size:2em}
+.error a,.notice a,.success a{font-weight:700}
+label{padding-top:1em;padding-bottom:4px;font-weight:bold}
+legend{font-size:1.3em;font-weight:700;line-height:1.3em}
+.form_radio{margin-left:1em;margin-right:1em}
+.hide{display:none}
