--- a/admin/jscript/editor-plugins/codemirror/css/colors.css
+++ b/admin/jscript/editor-plugins/codemirror/css/colors.css
@@ -1,1 +1,30 @@
-html{cursor:text}.editbox{color:#2E3436;font-family:monospace;font-size:12px;line-height:1.5em;margin:.4em;padding:0}.editbox p{margin:0}span.xml-tagname{color:#75507B}span.xml-cdata{color:#729FCF}span.xml-processing{color:#888A85}span.xml-error{color:#C00!important}pre.code,.editbox{color:#C00}span.js-localvariable{color:#204A87}span.php-keyword{color:#5C3566;font-weight:700}span.php-compile-time-constant{color:#AD7FA8;font-weight:700}span.php-predefined-constant{color:#4E9A06;font-weight:700}span.php-reserved-language-construct{color:#FCAF3E;font-weight:700}span.php-variable{color:#2E3436;font-weight:700}span.php-comment{color:#C17D11;font-stretch:condensed}span.php-string-double-quoted{color:#A40000;font-weight:700}span.syntax-error{background-color:#C00}span.deprecated{font-size:smaller}span.xml-attribute,span.js-atom,span.css-unit,span.php-atom{color:#4E9A06}span.xml-punctuation,span.xml-text,span.js-variable,span.js-property,span.css-identifier,span.php-t_string{color:#2E3436}span.xml-comment,span.js-comment,span.css-comment{color:#C17D11}span.xml-entity,span.js-string,span.css-string,span.php-string-single-quoted{color:#CE5C00}span.js-punctuation,span.js-operator{color:#555753}span.js-keyword,span.css-at,span.css-value{color:#5C3566}span.css-selector,span.xml-attname,span.js-variabledef,span.css-important,span.php-punctuation,span.php-operator{color:#3465A4}span.css-colorcode,span.php-predefined-function,span.php-predefined-class{color:#73D216}
+/* This file is a combination of the following codemirror sylesheets : xmlcolors.css, jscolors.css, csscolors.css and phpcolors.css */
+html{cursor:text}
+.editbox{color:#2E3436;font-family:monospace;font-size:12px;line-height:1.5em;margin:.4em;padding:0}
+.editbox p{margin:0}
+span.xml-tagname{color:#75507B}
+span.xml-cdata{color:#729FCF}
+span.xml-processing{color:#888A85}
+span.xml-error{color:#CC0000!important}
+pre.code,.editbox{color:#CC0000}
+span.js-localvariable{color:#204A87}
+span.css-selector{color:#3465A4}
+span.css-colorcode{color:#73D216}
+span.php-keyword{color:#5C3566;font-weight:700}
+span.php-compile-time-constant{color:#AD7FA8;font-weight:700}
+span.php-predefined-constant{color:#4E9A06;font-weight:700}
+span.php-reserved-language-construct{color:#FCAF3E;font-weight:700}
+span.php-variable{color:#2E3436;font-weight:700}
+span.php-comment{color:#C17D11;font-stretch:condensed}
+span.php-string-double-quoted{color:#A40000;font-weight:700}
+span.syntax-error{background-color:#CC0000}
+span.deprecated{font-size:smaller}
+span.xml-attribute,span.js-atom,span.css-unit,span.php-atom{color:#4E9A06}
+span.xml-punctuation,span.xml-text,span.js-variable,span.js-property,span.css-identifier,span.php-t_string{color:#2E3436}
+span.xml-attname,span.js-variabledef,span.css-important{color:#3465A4}
+span.xml-comment,span.js-comment,span.css-comment{color:#C17D11}
+span.xml-entity,span.js-string,span.css-string,span.php-string-single-quoted{color:#CE5C00}
+span.js-punctuation,span.js-operator{color:#555753}
+span.js-keyword,span.css-at,span.css-value{color:#5C3566}
+span.php-punctuation,span.php-operator{color:#3465A4}
+span.php-predefined-function,span.php-predefined-class{color:#73D216}
